# GhostWire

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README_en.md  build.bat
.github/workflows/: build.yml
cmake/: FixupMacBundle.cmake
libs/ghostwire/: HOWTO  LICENSE
libs/ghostwire/include/: ghostwire.h
resources/: Info.plist.in  LICENSE.rtf  app.manifest  app.manifest.in  app.rc  app.rc.in  ghostwire.desktop  resources.qrc
resources/icons/: GhostWire.icns
scripts/: install-ghostwire.ps1  obfuscate_config.py  verify_macos_bundle.py
src/: Application.cpp  Application.h  Config.h  GhostWire.cpp  GhostWire.h  IGhostWire.h  ITrayManager.h  MacPlatformIntegration.h  MacPlatformIntegration.mm  MacTrayManager.h  MacTrayManager.mm  SettingsManager.cpp  SettingsManager.h  SingleInstanceGuard.cpp  SingleInstanceGuard.h  SparklineWidget.cpp  SparklineWidget.h  StatsPanel.cpp  StatsPanel.h  StatsTracker.cpp  StatsTracker.h  TelegramManager.cpp  TelegramManager.h  TrayManager.cpp  TrayManager.h  TrayMenu.cpp  TrayMenu.h  UpdateChecker.cpp  UpdateChecker.h  UpdateNotifier.cpp  UpdateNotifier.h  Utils.cpp  Utils.h  main.cpp  version.h.in
translations/: ghostwire_bg.qm  ghostwire_bg.ts  ghostwire_ca.qm  ghostwire_ca.ts  ghostwire_cs.qm  ghostwire_cs.ts  ghostwire_da.qm  ghostwire_da.ts  ghostwire_de.qm  ghostwire_de.ts  ghostwire_en.qm  ghostwire_en.ts  ghostwire_es.qm  ghostwire_es.ts  ghostwire_fi.qm  ghostwire_fi.ts  ghostwire_fr.qm  ghostwire_fr.ts  ghostwire_gd.qm  ghostwire_gd.ts  ghostwire_hu.qm  ghostwire_hu.ts  ghostwire_it.qm  ghostwire_it.ts  ghostwire_ja.qm  ghostwire_ja.ts  ghostwire_ko.qm  ghostwire_ko.ts  ghostwire_lv.qm  ghostwire_lv.ts  ghostwire_pl.qm  ghostwire_pl.ts  ghostwire_sk.qm  ghostwire_sk.ts  ghostwire_tr.qm  ghostwire_tr.ts  ghostwire_uk.qm  ghostwire_uk.ts  ghostwire_zh_TW.qm  ghostwire_zh_TW.ts
